syntax = "proto3";

package user;

import "google/protobuf/empty.proto";


message User {
  string id = 1;
  string login = 2;
  string password = 3;
  string first_name = 4;
  string last_name = 5;
  string email = 6;
  string institution_id = 7;
  bool active = 8;
  Role role = 9;
}

enum Role {
  READONLY = 0;
  INSTITUTION = 1;
  ADMINISTRATOR = 2;
}

message UserId {
  string id = 1;
}

message UserLogin {
  string login = 1;
  string password = 2;
}

message UserList {
  repeated User users = 1;
}

service UserService {
  rpc AddUser(User) returns (UserId);
  rpc LoginUser(UserLogin) returns (User);
  rpc GetAllUsers(google.protobuf.Empty) returns (UserList);
  rpc GetUsersByInstitutionId(UserId) returns (UserList);
}
